# fidoroute

./: .gitignore  .travis.yml  CMakeLists.txt  INSTALL.md  Makefile  README.md  appveyor.yml  fidoroute.1  fidoroute.conf.5  fidoroute.cpp  fidoroute.spec  version.h
make/: fidoroute.100.vcxproj  fidoroute.100.vcxproj.filters  makefile.djg  makefile.emx  makefile.mvc
